style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Roboto", sans-serif;
}

html {
  font-size: 100%;
}

/* Mobile first, apenas uma coluna é criada, 
  o conteúdo fica empilhado,
  as linhas se adaptam para que o header e o footer
  preencham espaços relativos a seu conteúdo, o que 
  sobra (1fr) fica para o conteúdo principal.*/
.container {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
  text-align: center;
  min-height: 100vh;
  color: white;
}

/*O z-index: 1 garante que o header e sua sombra sempre
  fiquem acima do restante do conteúdo.*/
.header {
  grid-column: 1 / -1;
  background-color: #333a45;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  z-index: 1;
}

.content {
  display: grid;
  grid-template-columns: 1fr;
  color: #333;
}

.content-sidebar-menu {
  background-color: #474e5d;
  padding: 2rem;
  color: white;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin: 0;
}

.content-sidebar-menu button {
  width: 50%;
}

form {
  gap: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  font-weight: bold;
}


form input[type="text"] {
  width: 100%;
  font-size: 1rem;
  height: 2rem;
}

input {
  border-radius: 1em;
  border: none;
  background-color: rgb(224, 223, 223);
  padding: 0.5em 1em;
}

input:focus {
  outline: none;
}

.form-field {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.5rem;
  width: 100%;
}

.game-button {
  color: white;
  background-color: #e4a80d;
  margin-top: 1rem;
  padding: 0.5rem 1rem;
  border-radius: 1rem;
  border: none;
  font-weight: bold;
}

.game-button:hover,
button:hover {
  cursor: pointer;
  background-color: #ca940c;
}

.game-button:active,
button:active {
  background-color: #9f750a;
  outline: none;
}

.content-sidebar-advertisement {
  background-color: #474e5d;
  padding: 2rem;
  color: white;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  margin: 0;
  gap: 1rem;
}

.content {
  padding: 2rem;
}

.content-main {
  background-color: #f4f4f4;
  padding: 2rem;
  color: #333;
  height: 100%;
  text-align: center;
  border: 1px solid black;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  gap: 0.5rem;
}

.content-main p {
  text-align: left;
}

h2 {
  margin: 0;
  padding: 0;
}

h3 {
  margin: 0;
  padding: 0;
}

.game-board {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(3, 1fr);
  border: 1px solid black;
  border-radius: 1rem;
  padding: 1rem;
  width: 50%;
  height: 15rem;
  gap: 0.5rem;
  position: relative;
}

.cell {
  margin: 0;
  border-radius: 1rem;
  color: white;
  background-color: #e4a80d;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 1.5rem;
  border: 1px solid grey;
  cursor: pointer;
}

.winning-line {
  position: absolute;
  background-color: #dc3545;
  height: 0.3rem;
  border-radius: 0.3rem;
  width: 100%;
  left: 0;
}

.winning-line.row-0{
  top: 20%;
  transform: translateY(-50%);
}

.winning-line.row-1 {
  top: 50%;
  transform: translateY(-50%);
}

.winning-line.row-2 {
  top: 80%;
  transform: translateY(-50%);
}

.winning-line.col-0 {
  left: 16.66%;
  height: 100%;
  top: 0;
  width: 0.3rem;
  transform: translateX(-50%);
}

.winning-line.col-1{
  left: 50%;
  height: 100%;
  top: 0;
  width: 0.3rem;
  transform: translateX(-50%);
}

.winning-line.col-2 {
  left: 83.33%;
  height: 100%;
  top: 0;
  width: 0.3rem;
  transform: translateX(-50%);
}

.winning-line.diag-0 {
  width: 110%;
  top: 50%;
  left: -5%;
  transform: translateY(-50%) rotate(45deg);
}

.winning-line.diag-1 {
  width: 110%;
  top: 50%;
  left: -5%;
  transform: translateY(-50%) rotate(-45deg);
}

.footer {
  grid-column: 1 / -1;
  background-color: #333a45;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
  gap: 1rem;
}

/* Aplica o CSS em telas maiores que 768px, 
  telas de tables ou desktop, 
  o layout fica com 3 colunas.
  
  O uso do 'auto 1fr auto' garante que o conteúdo
  principal ocupe a tela toda depois que o header e o 
  footer já estão em seus lugares.*/
@media (min-width: 768px) {
  .container {
    grid-template-columns: 1fr 4fr 1fr;
    grid-template-rows: auto 1fr auto;
  }

  .header,
  .footer {
    grid-column: 1 / -1;
  }

  .content {
    grid-column: 2 / 3;
  }

  .content-sidebar-menu {
    grid-column: 1 / 2;
    grid-row: 2 / 3;
  }

  .content-sidebar-menu {
    background-color: #474e5d;
    padding: 2rem;
    color: white;
    text-align: left;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-start;
    margin: 0;
  }

  .content-sidebar-menu button {
    width: 100%;
  }

  .content-sidebar-advertisement {
    grid-column: 3 / 4;
    grid-row: 2 / 3;
  }
}

